--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,7 @@ jobs:
     environment: build
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup .NET 6
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 6.0.x
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: dotnet restore ./YaCloudKit.sln
@@ -22,7 +17,7 @@ jobs:
         run: dotnet build ./YaCloudKit.sln --configuration Release --no-restore
 
       - name: Test
-        run: dotnet test ./YaCloudKit.sln --configuration Release --no-restore
+        run: dotnet test --no-build ./YaCloudKit.sln --configuration Release --no-restore
 
       - name: Pack
         run: dotnet pack ./YaCloudKit.sln -c Release
