--- a/src/Postbox/YaCloudKit.Postbox/YaCloudKit.Postbox.csproj
+++ b/src/Postbox/YaCloudKit.Postbox/YaCloudKit.Postbox.csproj
@@ -1,18 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
         <LangVersion>latest</LangVersion>
-        <Description>Реализация методов регистраици зависимостей для YaCloudKit.MQ.Transport</Description>
-        <Authors>Gennady Kurbesov</Authors>
+        <Description>Tool YaCloudKit for working with Yandex Cloud Postbox.</Description>
+        <Authors>Gennadii Kurbesov</Authors>
         <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
         <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
-        <PackageTags>Яндекс, Облако, Yandex, Cloud, Message, Queue, kit, aws</PackageTags>
+        <PackageTags>Яндекс, Облако, Yandex, Cloud, Postbox, Email, kit, aws, mail</PackageTags>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageIcon>logo-main.png</PackageIcon>
         <VersionMajor>0</VersionMajor>
-        <VersionMinor>8</VersionMinor>
+        <VersionMinor>1</VersionMinor>
         <BuildNumber>0</BuildNumber>
         <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
         <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
@@ -20,6 +21,9 @@
         <Version>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</Version>
     </PropertyGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    </ItemGroup>
 
     <ItemGroup>
         <None Include="..\..\..\assets\logo-main.png">
@@ -31,5 +35,7 @@
             <PackagePath></PackagePath>
         </None>
     </ItemGroup>
+
+
 
 </Project>
