--- a/src/Postbox/YaCloudKit.Postbox/YaCloudKit.Postbox.csproj
+++ b/src/Postbox/YaCloudKit.Postbox/YaCloudKit.Postbox.csproj
@@ -4,6 +4,7 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
         <Description>Tool YaCloudKit for working with Yandex Cloud Postbox.</Description>
         <Authors>Gennadii Kurbesov</Authors>
         <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
@@ -35,7 +36,16 @@
             <PackagePath></PackagePath>
         </None>
     </ItemGroup>
-
-
+    
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.11" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+        <PackageReference Include="Polly" Version="8.5.0" />
+    </ItemGroup>
 
 </Project>
