--- a/src/IdentityAccessManagement/YaCloudKit.IAM/YaCloudKit.IAM.csproj
+++ b/src/IdentityAccessManagement/YaCloudKit.IAM/YaCloudKit.IAM.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Model\" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
+      <PackageReference Include="Polly" Version="8.5.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
     </ItemGroup>
 
 </Project>
