--- a/src/IdentityAccessManagement/YaCloudKit.IAM/YaCloudKit.IAM.csproj
+++ b/src/IdentityAccessManagement/YaCloudKit.IAM/YaCloudKit.IAM.csproj
@@ -4,11 +4,42 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>latest</LangVersion>
+        <Description>Tool YaCloudKit for working with Yandex Identity and Access Management.</Description>
+        <Authors>Gennadii Kurbesov</Authors>
+        <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
+        <PackageTags>Яндекс, Облако, Yandex, Cloud, iam, jwt, identity, access, oauth, token</PackageTags>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <PackageIcon>logo-main.png</PackageIcon>
+        <VersionMajor>0</VersionMajor>
+        <VersionMinor>1</VersionMinor>
+        <BuildNumber>0</BuildNumber>
+        <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
+        <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
+        <FileVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</FileVersion>
+        <Version>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</Version>
     </PropertyGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\..\..\assets\logo-main.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="..\..\..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.11" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
       <PackageReference Include="Polly" Version="8.5.0" />
