--- a/src/IdentityAccessManagement/YaCloudKit.IAM/YaCloudKit.IAM.csproj
+++ b/src/IdentityAccessManagement/YaCloudKit.IAM/YaCloudKit.IAM.csproj
@@ -1,18 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
-        <Description>Реализация методов регистраици зависимостей для YaCloudKit.MQ.Transport</Description>
-        <Authors>Gennady Kurbesov</Authors>
+        <Description>Tool YaCloudKit for working with Yandex Identity and Access Management.</Description>
+        <Authors>Gennadii Kurbesov</Authors>
         <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
         <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
-        <PackageTags>Яндекс, Облако, Yandex, Cloud, Message, Queue, kit, aws</PackageTags>
+        <PackageTags>Яндекс, Облако, Yandex, Cloud, iam, jwt, identity, access, oauth, token</PackageTags>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageIcon>logo-main.png</PackageIcon>
         <VersionMajor>0</VersionMajor>
-        <VersionMinor>8</VersionMinor>
+        <VersionMinor>1</VersionMinor>
         <BuildNumber>0</BuildNumber>
         <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
         <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
@@ -20,6 +22,9 @@
         <Version>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</Version>
     </PropertyGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    </ItemGroup>
 
     <ItemGroup>
         <None Include="..\..\..\assets\logo-main.png">
@@ -30,6 +35,15 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
+      <PackageReference Include="Polly" Version="8.5.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
     </ItemGroup>
 
 </Project>
