--- a/samples/YaCloudKit.Postbox.Examples/YaCloudKit.Postbox.Examples.csproj
+++ b/samples/YaCloudKit.Postbox.Examples/YaCloudKit.Postbox.Examples.csproj
@@ -5,9 +5,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\IdentityAccessManagement\YaCloudKit.IAM\YaCloudKit.IAM.csproj" />
       <ProjectReference Include="..\..\src\Postbox\YaCloudKit.Postbox\YaCloudKit.Postbox.csproj" />
     </ItemGroup>
 
