--- a/src/Postbox/YaCloudKit.Postbox/YaCloudKit.Postbox.csproj
+++ b/src/Postbox/YaCloudKit.Postbox/YaCloudKit.Postbox.csproj
@@ -2,20 +2,19 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
-        <Description>Tool YaCloudKit for working with Yandex Identity and Access Management.</Description>
+        <Nullable>enable</Nullable>
+        <Description>Tool YaCloudKit for working with Yandex Cloud Postbox.</Description>
         <Authors>Gennadii Kurbesov</Authors>
         <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
         <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
-        <PackageTags>Яндекс, Облако, Yandex, Cloud, iam, jwt, identity, access, oauth, token</PackageTags>
+        <PackageTags>Яндекс, Облако, Yandex, Cloud, Postbox, Email, kit, aws, mail</PackageTags>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageIcon>logo-main.png</PackageIcon>
         <VersionMajor>0</VersionMajor>
         <VersionMinor>1</VersionMinor>
-        <BuildNumber>2</BuildNumber>
+        <BuildNumber>0</BuildNumber>
         <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
         <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
         <FileVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</FileVersion>
@@ -36,14 +35,16 @@
             <PackagePath></PackagePath>
         </None>
     </ItemGroup>
-
+    
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.11" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
         <PackageReference Include="Polly" Version="8.5.0" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
     </ItemGroup>
 
 </Project>
